[package]
name = "thread-priority"
version = "0.7.0"
authors = ["Victor Polevoy <fx@thefx.co>"]
description = "Library for managing threads priority and schedule policies"
repository = "https://github.com/vityafx/thread-priority"
documentation = "https://docs.rs/thread-priority/"
readme = "README.md"
license = "MIT"
keywords = ["thread", "schedule", "priority", "pthread"]
categories = ["concurrency", "asynchronous", "os"]
edition = "2018"

[dev-dependencies]
rstest = "0.12"

[dependencies]
log = "0.4"
const_format = "0.2"
cfg-if = "1"

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
libc = "0.2"
winapi = { version = "0.3", features = ["errhandlingapi", "processthreadsapi", "winnt", "minwindef", "winbase"] }
