[package]
name = "thread-priority"
version = "1.0.0"
authors = ["Victor Polevoy <fx@thefx.co>"]
description = "Library for managing threads priority and schedule policies"
repository = "https://github.com/iddm/thread-priority"
documentation = "https://docs.rs/thread-priority/"
readme = "README.md"
license = "MIT"
keywords = ["thread", "schedule", "priority", "pthread"]
categories = ["concurrency", "asynchronous", "os"]
edition = "2021"
rust-version = "1.67.1"

[dev-dependencies]
rstest = "0.19"

[dependencies]
log = "0.4"
cfg-if = "1"
rustversion = "1"
bitflags = "2"

[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "macos", target_os = "ios", target_os = "dragonfly", target_os = "freebsd", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
libc = ">=0.2.123"

[target.'cfg(windows)'.dependencies]
libc = ">=0.2.123"
winapi = { version = "0.3", features = ["errhandlingapi", "processthreadsapi", "winnt", "minwindef", "winbase"] }
